--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <ul class="nav-links">
             <li>
-                <a href="https://www.uci.org/competition-hub/2025-uci-road-world-championships/7mnrx8NLAbor8iWnlpCuwe?tab=overview" target="_blank" rel="noopener noreferrer">Discover UCI</a>
+                <a href="https://ucikigali2025.rw/" target="_blank" rel="noopener noreferrer">Discover UCI</a>
             </li>
             <li>
                 <a href="#" data-modal-target="#fun-zone-modal">The Bralirwa Fan Zone Experiences</a>
@@ -65,7 +65,7 @@
                     <div class="card-content">
                         <h3>Discover UCI</h3>
                         <p>The Union Cycliste Internationale is the world governing body for sports cycling and oversees international events.</p>
-                        <a href="https://www.uci.org/competition-hub/2025-uci-road-world-championships/7mnrx8NLAbor8iWnlpCuwe?tab=overview" target="_blank" class="card-cta">Visit Site</a>
+                        <a href="https://ucikigali2025.rw/" target="_blank" class="card-cta">Visit Site</a>
                     </div>
                 </div>
                 <!-- Card 2: Fun Zone -->
@@ -142,7 +142,7 @@
     </div>
 </main>
 
-<!-- Fun Zone Modal -->
+<!-- Fun Zone Modal (FINAL - With Slideshows) -->
 <div class="modal-overlay" id="fun-zone-modal">
     <div class="modal">
         <button class="close-modal">&times;</button>
@@ -151,7 +151,7 @@
             <p>Join the Fun in the Fan Zone</p>
         </div>
         <div class="modal-body">
-            <!-- Tabs for navigation inside the modal -->
+            <!-- Main Tabs -->
             <div class="tabs">
                 <button class="tab-link active" data-tab="fz-experiences">Experiences</button>
                 <button class="tab-link" data-tab="fz-logistics">Location & Schedule</button>
@@ -162,26 +162,11 @@
                 <div id="fz-experiences" class="tab-content active">
                     <h4>What's On</h4>
                     <ul class="activities-list">
-                        <li>
-                            <i class="fas fa-tv"></i>
-                            <div class="activity-text"><strong>Live Viewing:</strong><span>Watch all the races live on our giant screens.</span></div>
-                        </li>
-                        <li>
-                            <i class="fas fa-music"></i>
-                            <div class="activity-text"><strong>Live DJ Sets:</strong><span>Featuring top local and international artists.</span></div>
-                        </li>
-                        <li>
-                            <i class="fas fa-vr-cardboard"></i>
-                            <div class="activity-text"><strong>Live VR Cycling:</strong><span>Experience the race track in virtual reality.</span></div>
-                        </li>
-                        <li>
-                            <i class="fas fa-bicycle"></i>
-                            <div class="activity-text"><strong>Spin Classes:</strong><span>Join high-energy spin sessions throughout the day.</span></div>
-                        </li>
-                        <li>
-                            <i class="fab fa-playstation"></i>
-                            <div class="activity-text"><strong>PlayStation Challenge:</strong><span>Compete for prizes in our gaming zone.</span></div>
-                        </li>
+                        <li><i class="fas fa-tv"></i><div class="activity-text"><strong>Live Viewing:</strong><span>Watch all the races live on our giant screens.</span></div></li>
+                        <li><i class="fas fa-music"></i><div class="activity-text"><strong>Live DJ Sets:</strong><span>Featuring top local and international artists.</span></div></li>
+                        <li><i class="fas fa-vr-cardboard"></i><div class="activity-text"><strong>Live VR Cycling:</strong><span>Experience the race track in virtual reality.</span></div></li>
+                        <li><i class="fas fa-bicycle"></i><div class="activity-text"><strong>Spin Classes:</strong><span>Join high-energy spin sessions throughout the day.</span></div></li>
+                        <li><i class="fab fa-playstation"></i><div class="activity-text"><strong>PlayStation Challenge:</strong><span>Compete for prizes in our gaming zone.</span></div></li>
                     </ul>
                     <hr>
                     <form class="modal-form">
@@ -197,37 +182,178 @@
                     <a href="https://ucikigali2025.rw/competition-program/" target="_blank" class="btn-secondary">View Full Competition Program</a>
                     <hr>
                     <h4>Fan Zone Locations</h4>
-                    <ul class="locations-list">
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>Nyabugogo:</strong> Sept 21 - 24</li>
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>Prince House:</strong> Sept 21 - 24</li>
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>Woodland:</strong> Sept 24 - 28</li>
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>Kigali Heights:</strong> Sept 21 - 28</li>
-                    </ul>
+                    <div class="tabs sub-tabs">
+                        <button class="tab-link active" data-tab="days-1-4">Days 1-4</button>
+                        <button class="tab-link" data-tab="days-5-7">Days 5-7</button>
+                        <button class="tab-link" data-tab="day-8">Day 8</button>
+                    </div>
+
+                    <div class="tab-content-wrapper">
+                        <!-- Content for Days 1-4 -->
+                        <div id="days-1-4" class="tab-content active">
+                            <div class="location-card-grid">
+                                <a href="#" target="_blank" class="map-card">
+                                    <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
+                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                                </a>
+                                <div class="description-card">
+                                    <div class="slideshow-container">
+                                        <img src="PrinceHouse.png" alt="Venue for Days 1-4" class="slide active">
+                                        <img src="Sawaciti.png" alt="Venue for Days 1-4" class="slide">
+                                    </div>
+                                    <div class="description-content">
+                                        <h5>Days 1-4 Locations</h5>
+                                        <ul>
+                                            <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                            <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Content for Days 5-7 -->
+                        <div id="days-5-7" class="tab-content">
+                            <div class="location-card-grid">
+                                <a href="#" target="_blank" class="map-card">
+                                    <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
+                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                                </a>
+                                <div class="description-card">
+                                    <div class="slideshow-container">
+                                        <img src="RDB.png" alt="Venue for Days 5-7" class="slide active">
+                                        <img src="Woodland.png" alt="Venue for Days 5-7" class="slide">
+                                    </div>
+                                    <div class="description-content">
+                                        <h5>Days 5-7 Locations</h5>
+                                        <ul>
+                                            <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                            <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Content for Day 8 -->
+                        <div id="day-8" class="tab-content">
+                            <div class="location-card-grid">
+                                <a href="#" target="_blank" class="map-card">
+                                    <img src="M3.png" alt="Map for Day 8 Fan Zones">
+                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                                </a>
+                                <div class="description-card">
+                                    <div class="slideshow-container">
+                                        <img src="PeleStad.png" alt="Venue for Day 8" class="slide active">
+                                        <img src="Woodland.png" alt="Venue for Day 8" class="slide">
+                                    </div>
+                                    <div class="description-content">
+                                        <h5>Day 8 Locations</h5>
+                                        <ul>
+                                            <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                            <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <hr>
                     <h4>How to Get There</h4>
                     <p>For detailed maps and directions to the main venues, use our location guide.</p>
-                    <button class="btn-secondary" data-modal-target="#locations-modal" data-modal-switch="true">
-                        Open Location Guide
-                    </button>
+                    <button class="btn-secondary" data-modal-target="#locations-modal" data-modal-switch="true">Open Location Guide</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Locations Modal -->
+<!-- Locations Modal (With Slideshows) -->
 <div class="modal-overlay" id="locations-modal">
     <div class="modal">
         <button class="close-modal">&times;</button>
         <div class="modal-header">
-            <h3><i class="fas fa-map-marked-alt"></i> Bralirwa's Fan Zone</h3>
-            <p>Follow our guides to get to the action smoothly.</p>
+            <h3><i class="fas fa-map-marked-alt"></i> Fan Zone Location Guide</h3>
+            <p>Find your way to the action with our interactive guides.</p>
         </div>
         <div class="modal-body">
-            <div class="location-content">
-                <h4>Kigali Convention Centre</h4>
-                <p>This is the central hub for the event. All shuttles lead here.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.525833219463!2d30.09033397475171!3d-1.9419447368817658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca6a3138b251d%3A0x1e8a92be201888dd!2sKigali%20Convention%2C%20Centre!5e0!3m2!1sen!2sus!4v1716312651030!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h4>Select Event Days</h4>
+            <div class="tabs sub-tabs">
+                <button class="tab-link active" data-tab="loc-days-1-4">Days 1-4</button>
+                <button class="tab-link" data-tab="loc-days-5-7">Days 5-7</button>
+                <button class="tab-link" data-tab="loc-day-8">Day 8</button>
+            </div>
+            <div class="tab-content-wrapper">
+                <!-- Locations for Days 1-4 -->
+                <div id="loc-days-1-4" class="tab-content active">
+                    <div class="location-card-grid">
+                        <a href="#" target="_blank" class="map-card">
+                            <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
+                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                        </a>
+                        <div class="description-card">
+                            <div class="slideshow-container">
+                                <img src="PrinceHouse.png" alt="Venue for Days 1-4" class="slide active">
+                                <img src="Sawaciti.png" alt="Venue for Days 1-4" class="slide">
+                            </div>
+                            <div class="description-content">
+                                <h5>Days 1-4 Locations</h5>
+                                <ul>
+                                    <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                    <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Locations for Days 5-7 -->
+                <div id="loc-days-5-7" class="tab-content">
+                    <div class="location-card-grid">
+                        <a href="#" target="_blank" class="map-card">
+                            <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
+                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                        </a>
+                        <div class="description-card">
+                            <div class="slideshow-container">
+                                <img src="RDB.png" alt="Venue for Days 5-7" class="slide active">
+                                <img src="Woodland.png" alt="Venue for Days 5-7" class="slide">
+                            </div>
+                            <div class="description-content">
+                                <h5>Days 5-7 Locations</h5>
+                                <ul>
+                                    <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                    <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Locations for Day 8 -->
+                <div id="loc-day-8" class="tab-content">
+                    <div class="location-card-grid">
+                        <a href="#" target="_blank" class="map-card">
+                            <img src="M3.png" alt="Map for Day 8 Fan Zones">
+                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
+                        </a>
+                        <div class="description-card">
+                            <div class="slideshow-container">
+                                <img src="PeleStad.png" alt="Venue for Day 8" class="slide active">
+                                <img src="Woodland.png" alt="Venue for Day 8" class="slide">
+                            </div>
+                            <div class="description-content">
+                                <h5>Day 8 Locations</h5>
+                                <ul>
+                                    <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                    <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
