--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <div class="location-card-grid">
-                                <a href="#" target="_blank" class="map-card">
+                                <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-card">
                                     <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
                                     <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                                 </a>
@@ -215,7 +215,7 @@
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
                             <div class="location-card-grid">
-                                <a href="#" target="_blank" class="map-card">
+                                <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
                                     <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
                                     <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                                 </a>
@@ -238,7 +238,7 @@
                         <!-- Content for Day 8 -->
                         <div id="day-8" class="tab-content">
                             <div class="location-card-grid">
-                                <a href="#" target="_blank" class="map-card">
+                                <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
                                     <img src="M3.png" alt="Map for Day 8 Fan Zones">
                                     <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                                 </a>
@@ -288,7 +288,7 @@
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <div class="location-card-grid">
-                        <a href="#" target="_blank" class="map-card">
+                        <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-card">
                             <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
                             <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                         </a>
@@ -311,7 +311,7 @@
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
                     <div class="location-card-grid">
-                        <a href="#" target="_blank" class="map-card">
+                        <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
                             <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
                             <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                         </a>
@@ -334,7 +334,7 @@
                 <!-- Locations for Day 8 -->
                 <div id="loc-day-8" class="tab-content">
                     <div class="location-card-grid">
-                        <a href="#" target="_blank" class="map-card">
+                        <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
                             <img src="M3.png" alt="Map for Day 8 Fan Zones">
                             <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
                         </a>
