--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 </main>
 
-<!-- Fun Zone Modal (FINAL - With Slideshows) -->
+<!-- Fun Zone Modal (FINAL - With NEW Vertical Layout) -->
 <div class="modal-overlay" id="fun-zone-modal">
     <div class="modal">
         <button class="close-modal">&times;</button>
@@ -178,10 +178,6 @@
 
                 <!-- Tab 2: Locations & Schedule -->
                 <div id="fz-logistics" class="tab-content">
-                    <h4>Schedule</h4>
-                    <a href="https://ucikigali2025.rw/competition-program/" target="_blank" class="btn-secondary">View Full Competition Program</a>
-                    <hr>
-                    <h4>Fan Zone Locations</h4>
                     <div class="tabs sub-tabs">
                         <button class="tab-link active" data-tab="days-1-4">Days 1-4</button>
                         <button class="tab-link" data-tab="days-5-7">Days 5-7</button>
@@ -191,85 +187,62 @@
                     <div class="tab-content-wrapper">
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
-                            <div class="location-card-grid">
-                                <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-card">
-                                    <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
-                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                                </a>
-                                <div class="description-card">
-                                    <div class="slideshow-container">
-                                        <img src="PrinceHouse.png" alt="Venue for Days 1-4" class="slide active">
-                                        <img src="Sawaciti.png" alt="Venue for Days 1-4" class="slide">
-                                    </div>
-                                    <div class="description-content">
-                                        <h5>Days 1-4 Locations</h5>
-                                        <ul>
-                                            <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
-                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                            <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <ul class="location-info-list">
+                                <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                                <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                            </ul>
+                            <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
+                                <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
+                            </a>
+                            <div class="direction-buttons">
+                                <a href="https://www.google.com/maps/search/?api=1&query=Prince+House,+Gikoroso,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Prince House</a>
+                                <a href="https://www.google.com/maps/search/?api=1&query=Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Sawacity</a>
                             </div>
                         </div>
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
-                            <div class="location-card-grid">
-                                <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
-                                    <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
-                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                                </a>
-                                <div class="description-card">
-                                    <div class="slideshow-container">
-                                        <img src="RDB.png" alt="Venue for Days 5-7" class="slide active">
-                                        <img src="Woodland.png" alt="Venue for Days 5-7" class="slide">
-                                    </div>
-                                    <div class="description-content">
-                                        <h5>Days 5-7 Locations</h5>
-                                        <ul>
-                                            <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
-                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                            <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <ul class="location-info-list">
+                                <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                                <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                            </ul>
+                            <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
+                                <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
+                            </a>
+                            <div class="direction-buttons">
+                                <a href="https://www.google.com/maps/search/?api=1&query=Rwanda+Development+Board,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Old RDB</a>
+                                <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                             </div>
                         </div>
                         <!-- Content for Day 8 -->
                         <div id="day-8" class="tab-content">
-                            <div class="location-card-grid">
-                                <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
-                                    <img src="M3.png" alt="Map for Day 8 Fan Zones">
-                                    <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                                </a>
-                                <div class="description-card">
-                                    <div class="slideshow-container">
-                                        <img src="PeleStad.png" alt="Venue for Day 8" class="slide active">
-                                        <img src="Woodland.png" alt="Venue for Day 8" class="slide">
-                                    </div>
-                                    <div class="description-content">
-                                        <h5>Day 8 Locations</h5>
-                                        <ul>
-                                            <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
-                                            <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                            <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <ul class="location-info-list">
+                                <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                                <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                                <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                            </ul>
+                            <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
+                                <img src="M3.png" alt="Map for Day 8 Fan Zones">
+                            </a>
+                            <div class="direction-buttons">
+                                <a href="https://www.google.com/maps/search/?api=1&query=Kigali+Pelé+Stadium" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Pele Stadium</a>
+                                <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                             </div>
                         </div>
+                        <!-- ADD THIS SECTION AT THE BOTTOM OF THE #fz-logistics TAB -->
+                        <div class="schedule-section">
+                            <h4>Schedule</h4>
+                            <a href="https://ucikigali2025.rw/competition-program/" target="_blank" class="btn-secondary">View Full Competition Program</a>
+                        </div>
                     </div>
-                    <hr>
-                    <h4>How to Get There</h4>
-                    <p>For detailed maps and directions to the main venues, use our location guide.</p>
-                    <button class="btn-secondary" data-modal-target="#locations-modal" data-modal-switch="true">Open Location Guide</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Locations Modal (With Slideshows) -->
+<!-- Locations Modal (With NEW Vertical Layout) -->
 <div class="modal-overlay" id="locations-modal">
     <div class="modal">
         <button class="close-modal">&times;</button>
@@ -278,7 +251,6 @@
             <p>Find your way to the action with our interactive guides.</p>
         </div>
         <div class="modal-body">
-            <h4>Select Event Days</h4>
             <div class="tabs sub-tabs">
                 <button class="tab-link active" data-tab="loc-days-1-4">Days 1-4</button>
                 <button class="tab-link" data-tab="loc-days-5-7">Days 5-7</button>
@@ -287,77 +259,54 @@
             <div class="tab-content-wrapper">
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
-                    <div class="location-card-grid">
-                        <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-card">
-                            <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
-                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                        </a>
-                        <div class="description-card">
-                            <div class="slideshow-container">
-                                <img src="PrinceHouse.png" alt="Venue for Days 1-4" class="slide active">
-                                <img src="Sawaciti.png" alt="Venue for Days 1-4" class="slide">
-                            </div>
-                            <div class="description-content">
-                                <h5>Days 1-4 Locations</h5>
-                                <ul>
-                                    <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
-                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                    <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
-                                </ul>
-                            </div>
-                        </div>
+                    <ul class="location-info-list">
+                        <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                        <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                        <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                    </ul>
+                    <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
+                        <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
+                    </a>
+                    <div class="direction-buttons">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Prince+House,+Gikoroso,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Prince House</a>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Sawacity</a>
                     </div>
                 </div>
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
-                    <div class="location-card-grid">
-                        <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
-                            <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
-                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                        </a>
-                        <div class="description-card">
-                            <div class="slideshow-container">
-                                <img src="RDB.png" alt="Venue for Days 5-7" class="slide active">
-                                <img src="Woodland.png" alt="Venue for Days 5-7" class="slide">
-                            </div>
-                            <div class="description-content">
-                                <h5>Days 5-7 Locations</h5>
-                                <ul>
-                                    <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
-                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                    <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
-                                </ul>
-                            </div>
-                        </div>
+                    <ul class="location-info-list">
+                        <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                        <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                        <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                    </ul>
+                    <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
+                        <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
+                    </a>
+                    <div class="direction-buttons">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Rwanda+Development+Board,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Old RDB</a>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                     </div>
                 </div>
                 <!-- Locations for Day 8 -->
                 <div id="loc-day-8" class="tab-content">
-                    <div class="location-card-grid">
-                        <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-card">
-                            <img src="M3.png" alt="Map for Day 8 Fan Zones">
-                            <div class="map-card-overlay"><i class="fas fa-map-marked-alt"></i><span>View on Google Maps</span></div>
-                        </a>
-                        <div class="description-card">
-                            <div class="slideshow-container">
-                                <img src="PeleStad.png" alt="Venue for Day 8" class="slide active">
-                                <img src="Woodland.png" alt="Venue for Day 8" class="slide">
-                            </div>
-                            <div class="description-content">
-                                <h5>Day 8 Locations</h5>
-                                <ul>
-                                    <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
-                                    <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                    <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
-                                </ul>
-                            </div>
-                        </div>
+                    <ul class="location-info-list">
+                        <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                        <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
+                        <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                    </ul>
+                    <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
+                        <img src="M3.png" alt="Map for Day 8 Fan Zones">
+                    </a>
+                    <div class="direction-buttons">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Kigali+Pelé+Stadium" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Pele Stadium</a>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- GSAP & Your Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
