--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                                <li><strong>Zones:</strong> Prince House, Gikoroso  & Sawacity Supermarket, Kicukiro</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                                <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St</li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -203,9 +203,9 @@
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                                <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
@@ -218,9 +218,9 @@
                         <!-- Content for Day 8 -->
                         <div id="day-8" class="tab-content">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                                <li><strong>Zones:</strong>  Pele Stadium, Nyamirambo & Wood Land Supermarket, Nyarutarama</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                                <li><strong>Access:</strong>Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M3.png" alt="Map for Day 8 Fan Zones">
@@ -232,7 +232,6 @@
                         </div>
                         <!-- ADD THIS SECTION AT THE BOTTOM OF THE #fz-logistics TAB -->
                         <div class="schedule-section">
-                            <h4>Schedule</h4>
                             <a href="https://ucikigali2025.rw/competition-program/" target="_blank" class="btn-secondary">View Full Competition Program</a>
                         </div>
                     </div>
@@ -260,9 +259,9 @@
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Prince House & Sawacity Supermarket</li>
+                        <li><strong>Zones:</strong> Prince House, Gikoroso  & Sawacity Supermarket, Kicukiro</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong> Prince House (KN 5 Rd - KK 190 St) | Sawacity (KK 8 Ave - KK 492 St)</li>
+                        <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St</li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                         <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -275,9 +274,9 @@
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Old RDB Parking & Wood Land Supermarket</li>
+                        <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong> Old RDB (KG 6 Ave - KG 230 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                        <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                         <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
@@ -290,9 +289,9 @@
                 <!-- Locations for Day 8 -->
                 <div id="loc-day-8" class="tab-content">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Pele Stadium & Wood Land Supermarket</li>
+                        <li><strong>Zones:</strong>  Pele Stadium, Nyamirambo & Wood Land Supermarket, Nyarutarama</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong> Pele Stadium (KN 20 Ave - KN 220 St) | Wood Land (KG 14 Ave - KG 12 Ave)</li>
+                        <li><strong>Access:</strong>Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                         <img src="M3.png" alt="Map for Day 8 Fan Zones">
