--- a/index.html
+++ b/index.html
@@ -181,14 +181,13 @@
                     <div class="tabs sub-tabs">
                         <button class="tab-link active" data-tab="days-1-4">Days 1-4</button>
                         <button class="tab-link" data-tab="days-5-7">Days 5-7</button>
-                        <button class="tab-link" data-tab="day-8">Day 8</button>
                     </div>
 
                     <div class="tab-content-wrapper">
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Prince House, Gikoroso  & Sawacity Supermarket, Kicukiro</li>
+                                <li><strong>Zones:</strong> Prince House - Gikoroso, Sawacity Supermarke - Kicukiro (Brioche) & Expo Zone at KCC</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                                 <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St</li>
                             </ul>
@@ -203,27 +202,12 @@
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama</li>
+                                <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama,Pele Stadium, Nyamirambo, Expo Zone at KCC</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
+                                <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St</li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
-                            </a>
-                            <div class="direction-buttons">
-                                <a href="https://www.google.com/maps/search/?api=1&query=Rwanda+Development+Board,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Old RDB</a>
-                                <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
-                            </div>
-                        </div>
-                        <!-- Content for Day 8 -->
-                        <div id="day-8" class="tab-content">
-                            <ul class="location-info-list">
-                                <li><strong>Zones:</strong>  Pele Stadium, Nyamirambo & Wood Land Supermarket, Nyarutarama</li>
-                                <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong>Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
-                            </ul>
-                            <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
-                                <img src="M3.png" alt="Map for Day 8 Fan Zones">
                             </a>
                             <div class="direction-buttons">
                                 <a href="https://www.google.com/maps/search/?api=1&query=Kigali+Pelé+Stadium" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Pele Stadium</a>
@@ -253,13 +237,12 @@
             <div class="tabs sub-tabs">
                 <button class="tab-link active" data-tab="loc-days-1-4">Days 1-4</button>
                 <button class="tab-link" data-tab="loc-days-5-7">Days 5-7</button>
-                <button class="tab-link" data-tab="loc-day-8">Day 8</button>
             </div>
             <div class="tab-content-wrapper">
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Prince House, Gikoroso  & Sawacity Supermarket, Kicukiro</li>
+                        <li><strong>Zones:</strong> Prince House - Gikoroso, Sawacity Supermarke - Kicukiro (Brioche) & Expo Zone at KCC</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                         <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St</li>
                     </ul>
@@ -274,37 +257,25 @@
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama</li>
+                        <li><strong>Zones:</strong>  Old RDB Parking, Gishushu &  Wood Land Supermarket, Nyarutarama,Pele Stadium, Nyamirambo, Expo Zone at KCC</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
+                        <li><strong>Access:</strong> Old RDB Parking, Gishushu, Cross Roads of KG 6 Ave - KG 230 St |  Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St</li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                         <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
-                    </a>
-                    <div class="direction-buttons">
-                        <a href="https://www.google.com/maps/search/?api=1&query=Rwanda+Development+Board,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Old RDB</a>
-                        <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
-                    </div>
-                </div>
-                <!-- Locations for Day 8 -->
-                <div id="loc-day-8" class="tab-content">
-                    <ul class="location-info-list">
-                        <li><strong>Zones:</strong>  Pele Stadium, Nyamirambo & Wood Land Supermarket, Nyarutarama</li>
-                        <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong>Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave</li>
-                    </ul>
-                    <a href="https://www.google.com/maps/dir/Pele+Stadium,+Nyamirambo,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
-                        <img src="M3.png" alt="Map for Day 8 Fan Zones">
                     </a>
                     <div class="direction-buttons">
                         <a href="https://www.google.com/maps/search/?api=1&query=Kigali+Pelé+Stadium" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Pele Stadium</a>
                         <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                     </div>
                 </div>
+                    <div class="direction-buttons">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
 <!-- GSAP & Your Script -->
