--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Prince House - Gikoroso, Sawacity Supermarke(Brioche) - Kicukiro & Expo Zone at KCC</li>
+                                <li><strong>Zones:</strong> Prince House - Gikoroso | Sawacity Supermarket (Brioche) - Kicukiro & Expo Zone at KCC</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                                 <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at KCC</li>
                             </ul>
@@ -202,7 +202,7 @@
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong>  Wood Land Supermarket, Nyarutarama,Pele Stadium, Nyamirambo, Expo Zone at KCC</li>
+                                <li><strong>Zones:</strong> Wood Land Supermarket - Nyarutarama | Pele Stadium - Nyamirambo & Expo Zone at KCC</li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                                 <li><strong>Access:</strong> Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at KCC</li>
                             </ul>
@@ -242,7 +242,7 @@
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Prince House - Gikoroso, Sawacity Supermarke(Brioche) - Kicukiro  & Expo Zone at KCC</li>
+                        <li><strong>Zones:</strong> Prince House - Gikoroso | Sawacity Supermarket (Brioche) - Kicukiro & Expo Zone at KCC</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                         <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at KCC</li>
                     </ul>
@@ -257,7 +257,7 @@
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Wood Land Supermarket, Nyarutarama,Pele Stadium, Nyamirambo, Expo Zone at KCC</li>
+                        <li><strong>Zones:</strong> Wood Land Supermarket - Nyarutarama | Pele Stadium - Nyamirambo & Expo Zone at KCC</li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
                         <li><strong>Access:</strong>Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at KCC</li>
                     </ul>
