--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                         <!-- Content for Days 1-4 -->
                         <div id="days-1-4" class="tab-content active">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Prince House - Gikoroso | Sawacity Supermarket (Brioche) - Kicukiro & Expo Zone at KCC</li>
+                                <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at KCC</li>
+                                <li><strong>Access:</strong>  <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  <span class="location-highlight">Sawaciti Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -202,9 +202,9 @@
                         <!-- Content for Days 5-7 -->
                         <div id="days-5-7" class="tab-content">
                             <ul class="location-info-list">
-                                <li><strong>Zones:</strong> Wood Land Supermarket - Nyarutarama | Pele Stadium - Nyamirambo & Expo Zone at KCC</li>
+                                <li><strong>Zones:</strong> <span class="location-highlight">Wood Land Supermarket</span> - Nyarutarama | <span class="location-highlight">Pele Stadium</span> - Nyamirambo & Expo Zone at <span class="location-highlight">KCC</span></li>
                                 <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                                <li><strong>Access:</strong> Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at KCC</li>
+                                <li><strong>Access:</strong> <span class="location-highlight">Wood Land Supermarket</span>, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave | <span class="location-highlight">Pele Stadium</span>, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                             </ul>
                             <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                                 <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
@@ -242,9 +242,9 @@
                 <!-- Locations for Days 1-4 -->
                 <div id="loc-days-1-4" class="tab-content active">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Prince House - Gikoroso | Sawacity Supermarket (Brioche) - Kicukiro & Expo Zone at KCC</li>
+                        <li><strong>Zones:</strong> <span class="location-highlight">Prince House</span> - Gikoroso | <span class="location-highlight">Sawacity Supermarket</span> (Brioche) - Kicukiro & Expo Zone at <span class="location-highlight">KCC</span></li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong>  Prince House, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St |  Sawaciti Supermarket, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at KCC</li>
+                        <li><strong>Access:</strong> <span class="location-highlight">Prince House</span>, Gikoroso, Cross Roads of KN 5 Rd - KK 190 St | <span class="location-highlight">Sawacity Supermarket</span>, Kicukiro, Cross Roads of KK 8 Ave - KK 492 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Prince+House,+Gikoroso,+Kigali/Sawacity+Supermarket,+Kicukiro,+Kigali" target="_blank" class="map-image-link">
                         <img src="M1.png" alt="Map for Days 1-4 Fan Zones">
@@ -257,9 +257,9 @@
                 <!-- Locations for Days 5-7 -->
                 <div id="loc-days-5-7" class="tab-content">
                     <ul class="location-info-list">
-                        <li><strong>Zones:</strong> Wood Land Supermarket - Nyarutarama | Pele Stadium - Nyamirambo & Expo Zone at KCC</li>
+                        <li><strong>Zones:</strong> <span class="location-highlight">Wood Land Supermarket</span> - Nyarutarama | <span class="location-highlight">Pele Stadium</span> - Nyamirambo & Expo Zone at <span class="location-highlight">KCC</span></li>
                         <li><strong>Time:</strong> 8:00 AM - 5:00 PM</li>
-                        <li><strong>Access:</strong>Wood Land Supermarket, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave Pele Stadium, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at KCC</li>
+                        <li><strong>Access:</strong><span class="location-highlight">Wood Land Supermarket</span>, Nyarutarama, Cross Roads of KG 14 Ave - KG 12 Ave | <span class="location-highlight">Pele Stadium</span>, Nyamirambo, Cross Roads of KN 20 Ave - Kn 220 St | Expo Zone at <span class="location-highlight">KCC</span></li>
                     </ul>
                     <a href="https://www.google.com/maps/dir/Old+RDB+Parking,+Gishushu,+Kigali/Wood+Land+Supermarket,+Nyarutarama,+Kigali" target="_blank" class="map-image-link">
                         <img src="M2.png" alt="Map for Days 5-7 Fan Zones">
@@ -269,14 +269,10 @@
                         <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
                     </div>
                 </div>
-                    <div class="direction-buttons">
-                        <a href="https://www.google.com/maps/search/?api=1&query=Woodlands+Supermarket,+Gacuriro,+Kigali" target="_blank" class="btn-direction"><i class="fas fa-map-pin"></i> Directions to Wood Land</a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-
+</div>
 
 <!-- GSAP & Your Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
